monitoring/prometheus/30-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app: prometheus
spec:
  serviceName: prometheus
  replicas: 2
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.15.2
          ports:
            - name: web
              containerPort: 9090
          readinessProbe:
            httpGet:
              port: web
              path: /-/ready
          livenessProbe:
            httpGet:
              port: web
              path: /-/healthy
          resources:
            requests:
              memory: 400Mi
          terminationMessagePolicy: FallbackToLogsOnError
          volumeMounts:
            - name: config
              mountPath: /etc/prometheus
              readOnly: true
            - name: data
              mountPath: /prometheus
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: prometheus
      securityContext:
        runAsUser: 65534
      terminationGracePeriodSeconds: 600
      volumes:
        - name: config
          configMap:
            name: prometheus
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 50Gi
