monitoring/prometheus/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app: prometheus
spec:
  type: ClusterIP
  selector:
    app: prometheus
  sessionAffinity: ClientIP
  ports:
    - name: http
      port: 9090
      targetPort: http
